# actuator_analysis

./: NOTES.md  README.md  RESULTS.html  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
config/: defaults.yaml
scripts/: bulk_latency_calculation.py  data_viewer.py  extract_all_data.py  latency_vs_signal_frequency.py  overshoot.py  overshoot_and_settling.py  plot_extracted_data.py  run_analysis.py
src/actuator_analysis/: __init__.py  config_loader.py  extract_all_data.py  latency.py  load_data.py  plot_streams.py
src/actuator_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_config_loader.py  test_load_data.py
